--- a/index.html
+++ b/index.html
@@ -48,15 +48,19 @@
             <div class="right">
                 <h1>About <span>Me</span></h1>
                 <h3>Hello! I am Juned Kachaliya </h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel labore quo perferendis error? Explicabo
-                    amet hic repudiandae voluptatum beatae quisquam deserunt saepe enim. Sunt deleniti iure quas atque
-                    perspiciatis a dolorum delectus voluptatibus accusamus, praesentium mollitia blanditiis et totam
-                    iste. Deserunt enim velit dolores possimus dolor quibusdam eligendi quod accusantium!</p>
+                <p> • Overall 6+ years of IT experience which includes 1+ years of experience as a React JS Developer. <br/>                   
+                    • Expertise in Healthcare and E-commerce Domain with leading US client. <br/>
+                    • Experience in React JS for developing Single Page Applications (SPA). <br/>
+                    • Experience in React JS for developing components, Forms, Events, Router and Redux. <br/>
+                    • Having experience in developing Web Applications using HTML, CSS, JavaScript, ReactJS. <br/>
+                    • Experience in Functional Testing. <br/>
+                    • Experienced in API Testing using Postman.<br/>
+                    • Working experience on Azure DevOps as project management tools. <br/>
+                    • Working experience in various database management tools like DBeaver, IBM Data Studio, Microsoft Azure Storage Explorer. <br/>
+                    • Having good experience on writing SQL queries. • Knowledge of version control system such as GitHub.</p>
                 <div class="social flex">
-                    <a href="#"><img src="./images/linkedIn.png" width="50" alt="linkedIn"></a>
-                    <a href="#"><img src="./images/leetCode.png" width="50" alt="leetcode"></a>
-                    <a href="#"><img src="./images/gitHub.png" width="50" alt="github"></a>
-                    <a href="#"> <img src="./images/twitter.png" width="50" alt="twitter"></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/juned-kachaliya/"><img src="./images/linkedIn.png" width="50" alt="linkedIn"></a>
+                    <a target="_blank" href="https://github.com/JKFullStackDeveloper"><img src="./images/gitHub.png" width="50" alt="github"></a>
                 </div>
             </div>
         </div>
@@ -64,32 +68,28 @@
     <section id="project" class="services">
         <div class="container">
             <h1 class="services-head">My Projects</h1>
-            <p>I mostly work with HTML ,CSS ,JavaScript , React and Node</p>
+            <p>I worked with HTML ,CSS ,JavaScript , ReactJS and NodeJS</p>
             <div class="card-grid">
                 <div class="card">
                     <img src="./images/ecommerce.jpeg" width="80" alt="E-Commerce">
-                    <h2>E-Commerce</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab repellendus maxime obcaecati?
-                        Adipisci eveniet, harum earum quidem nam ipsam voluptas repellat cumque reiciendis a optio,
-                        magnam ex fugiat doloribus ipsa dolor architecto dolorem? Natus non cumque, voluptas tenetur
-                        aspernatur quas, quibusdam eligendi deserunt voluptatibus facilis delectus dolorum, corporis
-                        dicta assumenda.</p>
+                    <h2>SJK Shopping</h2>
+                    <p>E-commerce application build with HTML,CSS, JavaScript and ReactJS and deployed on netlify.</p>
+                    <br/>
+                    <p>Visit Application : <a target="_blank" href="https://sjkshopping.netlify.app/">Click here</a> </p>
                 </div>
                 <div class="card">
-                    <img src="./images/todo.png" width="80" alt="to-do list">
-                    <h2>ToDo List</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima ea ipsa dicta neque dolore.
-                        Earum repellat recusandae tempore, magnam asperiores a error itaque nisi nostrum veniam dolorum,
-                        tempora fugiat vero voluptate quasi? Velit, eius dolores quaerat provident deserunt expedita
-                        consequuntur alias molestias facere similique tempore dolor itaque esse neque ab!</p>
+                    <img src="./images/weather-icon.jpg" width="80" alt="to-do list">
+                    <h2>Live Weather App</h2>
+                    <p>Live Weather app created using HTML,CSS and JavaScript</p>
+                    <br/>
+                    <p>Visit Application : <a target="_blank" href="https://jkfullstackdeveloper.github.io/LiveWeather/">Click here</a> </p>
                 </div>
                 <div class="card">
                     <img src="./images/cart.jpeg" width="80" height="50" alt="my-cart">
-                    <h2>My Shopping Cart</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, magnam officiis? Delectus
-                        debitis iure ut optio quia sequi fugit aspernatur libero. Tenetur atque adipisci sequi suscipit
-                        cum quam impedit inventore eius id! Obcaecati natus aliquid animi, illo illum, possimus eum
-                        earum aut minus alias ea nobis suscipit ex tempore repudiandae!</p>
+                    <h2>Online Boutique</h2>
+                    <p>Responsive E-Commerce Web App created using HTML5 CSS3 JavaScript</p>
+                    <br/>
+                    <p>Visit Application : <a target="_blank" href="https://jkfullstackdeveloper.github.io/OnlineBoutique/">Click here</a> </p>
                 </div>
             </div>
         </div>
